--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
       <div class="title">Rb The-Coder</div>
       <ul class="nav-items">
         <li><a href="#">home</a></li>
-        <li id="extender">
-          <a href="mailto:sambhavshahi98765@gmail.com">projects</a>
+        <li>
+          <a href="#">projects</a>
         </li>
-        <li><a href="#">contact</a></li>
-        <li><a href="#">about</a></li>
+        <li><a href="mailto:sambhavshahi98765@gmail.com">contact</a></li>
+        <li><a href="#" id="extender">about</a></li>
       </ul>
       <div id="burger">
         <div class="line1"></div>
